--- a/Code/Roberts/RobertsC_Visualization.ipynb
+++ b/Code/Roberts/RobertsC_Visualization.ipynb
@@ -1,8 +1,38 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load/Export Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Load relevant packages\n",
+    "import seaborn as sns\n",
+    "import os\n",
+    "#Load the Titanic dataset from seaborn\n",
+    "titanic = sns.load_dataset(\"titanic\")\n",
+    "#Export the dataset to a CSV file and store in the Data folder\n",
+    "file_path = os.path.abspath(os.path.join(os.getcwd(), \"../../\", \"Data\"))\n",
+    "titanic.to_csv(os.path.join(file_path, \"titanic_seaborn_data.csv\"), index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Package Installation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,21 +41,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import os\n",
     "\n",
     "#Load the Titanic dataset from seaborn\n",
     "titanic = sns.load_dataset(\"titanic\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Export the dataset to a CSV file and store in the Data folder\n",
-    "file_path = os.path.abspath(os.path.join(os.getcwd(), \"../../\", \"Data\"))\n",
-    "titanic.to_csv(os.path.join(file_path, \"titanic_seaborn_data.csv\"), index=False)"
    ]
   },
   {
