--- a/Code/Brown/BrownA_Visualization.ipynb
+++ b/Code/Brown/BrownA_Visualization.ipynb
@@ -20,7 +20,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -363,6 +365,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### survived: \n",
+    "0 = No, 1 = Yes\n",
+    "\n",
+    "\n",
+    "### pclass (Ticket class): \n",
+    "1 = upper, 2 = middle, 3 = lower\n",
+    "\n",
+    "\n",
+    "### sibsp (# of siblings (brother, sister, stepbrother, stepsister) / spouses (husband, wife) aboard the Titanic)\n",
+    "\n",
+    "\n",
+    "\n",
+    "### parch (# of parents / children aboard the Titanic): \n",
+    "Parent = mother, father. \n",
+    "\n",
+    "Child = daughter, son, stepdaughter, stepson. \n",
+    "\n",
+    "Some children travelled only with a nanny, therefore parch=0 for them.\n",
+    "\n",
+    "\n",
+    "### embarked (Port of Embarkation):\t\n",
+    "C = Cherbourg, Q = Queenstown, S = Southampton"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -403,9 +433,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -417,9 +447,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
