--- a/Code/Brown/BrownA_Visualization.ipynb
+++ b/Code/Brown/BrownA_Visualization.ipynb
@@ -1086,7 +1086,8 @@
     "plt.show()\n",
     "\n",
     "### bar chart: survival rate by gender\n",
-    "### simple, clear comparison of survival rates between genders."
+    "### simple, clear comparison of survival rates between genders\n",
+    "### highlights that females had significantly higher survival rate than males (about 70% (f) vs 20% (m))"
    ]
   },
   {
