--- a/Code/Brown/BrownA_Visualization.ipynb
+++ b/Code/Brown/BrownA_Visualization.ipynb
@@ -1117,7 +1117,8 @@
     "plt.show()\n",
     "\n",
     "### stacked bar chart: gender vs. passenger class & survival\n",
-    "### effectively shows the distribution of gender within each passenger class with color differentiation."
+    "### effectively shows the distribution of gender within each passenger class with color differentiation\n",
+    "### shows that more males were in 3rd class, and females were more distibuted "
    ]
   },
   {
@@ -1146,7 +1147,8 @@
     "plt.show()\n",
     "\n",
     "### box plot: age distribution by gender & survival\n",
-    "### displays the distribution of age, highlighting medians, quartiles, and outliers by gender and survival."
+    "### displays the distribution of age, highlighting medians, quartiles, and outliers by gender and survival\n",
+    "### shows that age distribution is similar across genders, but varies slightly by survival status (0=died, 1=survived)"
    ]
   },
   {
@@ -1175,7 +1177,8 @@
     "plt.show()\n",
     "\n",
     "### violin plot: fare paid by gender & survival\n",
-    "### combines boxplot and density plot to show the fare distribution by gender and survival, with a clear contrast."
+    "### combines boxplot and density plot to show the fare distribution by gender and survival, with a clear contrast\n",
+    "### shows that higher fares generally were associated with higher survival chances, especially with females"
    ]
   },
   {
@@ -1204,7 +1207,8 @@
     "plt.show()\n",
     "\n",
     "### pie chart: gender distribution of survivors\n",
-    "### pie charts are unnecessary here, and a bar chart would be clearer."
+    "### pie charts are unnecessary here, and a bar chart would be clearer\n",
+    "### harder to interpret exact porportions"
    ]
   },
   {
@@ -1238,7 +1242,7 @@
     "plt.show()\n",
     "\n",
     "### 3D bar chart: survival by gender\n",
-    "### 3D adds complexity without providing extra value, making the chart harder to read."
+    "### 3D adds complexity without providing extra value, making the chart harder to read compared to 2D plot"
    ]
   },
   {
@@ -1296,7 +1300,7 @@
     "plt.show()\n",
     "\n",
     "### scatter Plot: gender vs. survival rate\n",
-    "### scatter plots are for continuous variables, and here it overcomplicates the data without providing insights."
+    "### scatter plots are for continuous variables, and here it overcomplicates the data without providing insights"
    ]
   }
  ],
