--- a/Code/Brown/BrownA_Visualization.ipynb
+++ b/Code/Brown/BrownA_Visualization.ipynb
@@ -2,6 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Ashlyn Brown\n",
+    "## DATA 6550\n",
+    "## Group 6: Autumn, Chance, Kirstin & Ashlyn\n",
+    "\n",
+    "## Group Project 2- Visualization\n",
+    "## My individual focus: Gender & Survival"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
