--- a/Code/Roberts/RobertsC_Visualization.ipynb
+++ b/Code/Roberts/RobertsC_Visualization.ipynb
@@ -137,7 +137,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "d47a398d-9d96-4320-b074-fe9622095460",
+       "ref": "6f116321-d8e9-4354-9562-08f634aa27a6",
        "rows": [
         [
          "0",
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -490,19 +490,19 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Count the number of missing values in the dataset as a percentage\n",
-    "titanic.isnull().mean() * 100\n"
+    "titanic.isnull().mean() * 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -512,18 +512,18 @@
        "24.00    30\n",
        "22.00    27\n",
        "18.00    26\n",
+       "19.00    25\n",
        "28.00    25\n",
-       "30.00    25\n",
        "         ..\n",
-       "24.50     1\n",
-       "0.67      1\n",
-       "0.42      1\n",
-       "34.50     1\n",
+       "36.50     1\n",
+       "55.50     1\n",
+       "0.92      1\n",
+       "23.50     1\n",
        "74.00     1\n",
        "Name: count, Length: 88, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,6 +531,67 @@
    "source": [
     "#Display the value counts of the 'age' column\n",
     "titanic['age'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Calculate the mean of the 'age' column for each pclass\n",
+    "titanic.groupby('pclass')['age'].mean()\n",
+    "age_pclass1 = titanic[titanic['pclass'] == 1]['age'].mean()\n",
+    "age_pclass2 = titanic[titanic['pclass'] == 2]['age'].mean()\n",
+    "age_pclass3 = titanic[titanic['pclass'] == 3]['age'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Fill missing values in the 'age' column with the mean age of each pclass\n",
+    "titanic['age'] = np.where((titanic['pclass'] == 1) & (titanic['age'].isnull()), age_pclass1, titanic['age'])\n",
+    "titanic['age'] = np.where((titanic['pclass'] == 2) & (titanic['age'].isnull()), age_pclass2, titanic['age'])\n",
+    "titanic['age'] = np.where((titanic['pclass'] == 3) & (titanic['age'].isnull()), age_pclass3, titanic['age'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "survived        0.000000\n",
+       "pclass          0.000000\n",
+       "sex             0.000000\n",
+       "age             0.000000\n",
+       "sibsp           0.000000\n",
+       "parch           0.000000\n",
+       "fare            0.000000\n",
+       "embarked        0.224467\n",
+       "class           0.000000\n",
+       "who             0.000000\n",
+       "adult_male      0.000000\n",
+       "deck           77.216611\n",
+       "embark_town     0.224467\n",
+       "alive           0.000000\n",
+       "alone           0.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Count the number of missing values in the dataset as a percentage\n",
+    "titanic.isnull().mean() * 100"
    ]
   },
   {
@@ -543,13 +604,39 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Age and Survival Rate"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PClass and Embark_Town Survival Rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
@@ -565,6 +652,13 @@
    "source": [
     "### Passenger Class and Survival"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -584,11 +678,16 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -602,7 +701,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
