--- a/Code/Roberts/RobertsC_Visualization.ipynb
+++ b/Code/Roberts/RobertsC_Visualization.ipynb
@@ -1103,7 +1103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To start analysis of age, I chose to find the optimal bin size using different methods. Based on the resulting plots, I chose to use 11 bins for the age data based on Sturges' Rule. From the stacked histogram, we can observe that in each bin a small percentage of passengers survived. Overall the data is slightly right-skewed with the most prevalent age group being 22 to 29 years old (200 passengers). The plot is visually appealing with it clear legends, axis labels, and title."
+    "To start analysis of age, I chose to find the optimal bin size using different methods. Based on the resulting plots, I chose to use 11 bins for the age data based on Sturges' Rule. From the stacked histogram, we can observe that in each bin a small percentage of passengers survived. Overall the data is slightly right-skewed with the most prevalent age group being 22 to 29 years old (200 passengers). The plot is visually appealing with it clear legends, axis labels, and title. Viewers can easily distinguish between the two categories of survival as it relates to the wider population of passengers in each age group since the number of surviving passengers is less than the total passengers present; each bar encompasses the total subpopulation of passengers when adding survival status."
    ]
   },
   {
